components/markdown/tests/snapshots/markdown__can_render_directive_width_argument.snap
---
source: components/markdown/tests/markdown.rs
expression: body
---
<div class="reflow reflow-bp-37rem" style="--table-w: 54rem"><table><thead><tr><th scope="col">Name</th><th scope="col">Role</th></tr></thead><tbody>
<tr><td data-label="Name">Ada</td><td data-label="Role">Eng</td></tr>
</tbody></table>
</div>
