components/markdown/tests/snapshots/markdown__can_render_table_group_rows.snap
---
source: components/markdown/tests/markdown.rs
expression: body
---
<table><thead><tr><th>flag</th><th>arity</th><th>effect</th></tr></thead><tbody>
<tr class="group"><th colspan="3"><strong>sync behaviour</strong></th></tr><tr><td><code>--no-sync</code></td><td>0</td><td>skip the snapshot push</td></tr>
</tbody></table>
<div class="reflow reflow-bp-37rem"><table><thead><tr><th scope="col">flag</th><th scope="col">arity</th><th scope="col">effect</th></tr></thead><tbody>
<tr class="group"><th colspan="3"><strong>sync behaviour</strong></th></tr><tr><td data-label="flag"><code>--no-sync</code></td><td data-label="arity">0</td><td data-label="effect">skip the snapshot push</td></tr>
</tbody></table>
</div>
