components/markdown/tests/snapshots/markdown__tables_are_plain_without_scroll_or_expand_directive.snap
---
source: components/markdown/tests/markdown.rs
expression: body
---
<table><thead><tr><th>Name</th><th>Role</th></tr></thead><tbody>
<tr><td>Ada</td><td>Eng</td></tr>
</tbody></table>
